--- a/sikimosya/css/information.css
+++ b/sikimosya/css/information.css
@@ -26,3 +26,31 @@
   width: 80%;
   flex-grow: 1;
 }
+
+@media screen and (max-width: 768px)  {
+  .information-main-img {
+    height: 100px;
+    margin-top: 60px;
+  }
+
+  .information-main-text {
+    padding: 0;
+  }
+  .information-main-text p {
+    font-size: 24px;
+    margin-top: 0;
+    line-height: 2rem;
+    padding-top: 15px;
+  }
+
+  .information-inner-text p {
+    font-size: 38px;
+    top: -35px;
+  }
+}
+@media screen and (max-width: 480px)  {
+  .info {
+    padding: 60px 10px 30px;
+    background-color: #fff;
+  }
+}
