--- a/sikimosya/css/work.css
+++ b/sikimosya/css/work.css
@@ -53,3 +53,30 @@
     font-weight: bold;
     letter-spacing: 0.5rem;
 }
+
+@media screen and (max-width: 768px)  {
+  .work-main-img {
+    height: 100px;
+    margin-top: 60px;
+  }
+
+  .work-main-text {
+    padding: 0;
+  }
+  .work-main-text p {
+    font-size: 24px;
+    margin-top: 0;
+    line-height: 2rem;
+    padding-top: 15px;
+  }
+
+  .work-inner-text p {
+    font-size: 38px;
+    top: -35px;
+  }
+}
+@media screen and (max-width: 480px)  {
+  .work-top {
+    padding: 60px 10px 30px;
+  }
+}
